start of the navbar

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0" />
+<head>
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+</head>
 
 <style>
     body {
@@ -26,20 +29,7 @@
     <frameset id="frameSet2" rows="100%">
         <frame src="nav.html" name="nav" id="nav">
     </frameset>
-    <frame src="main.html" name="main" id="main">
+    <frame src="landing.html" name="main" id="main">
 </frameset>
-
-
-
-<!-- <head>
-    <title>Page Title</title>
-</head>
-
-<body>
-
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
-
-</body> -->
 
 </html>
