--- a/nav.html
+++ b/nav.html
@@ -1,3 +1,26 @@
+<!DOCTYPE html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0" />
+<head>
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/nav.css">
+</head>
+
+<!-- About -->
 <div>
-    This is the navbar.
+    <p class="menu-header">About</p>
+</div>
+
+<!-- Games -->
+<div>
+    <p class="menu-header">Games</p>
+    <a class="menu-item" href="games/luigi.html" onclick="load('games/luigi.html')" target="main">
+        <i>Winter, 2001: Someone tell Luigi I love him</i>
+    </a><br>
+    <a class="menu-item" href="games/joanie.html" onclick="load('games/joanie.html')" target="main">
+        <i>Joanie</i>
+    </a><br>
+    <a class="menu-item" href="games/maps.html" onclick="load('games/maps.html')" target="main">
+        <i>Maps of the Known World</i>
+    </a><br>
 </div>
