added Joey Schutz header to nav; messing with line-height

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
-<style>
+<!-- <style>
     body {
         margin: 0;
         padding: 0;
@@ -19,7 +19,7 @@
     head title {
         text-align: center;
     }
-</style>
+</style> -->
 
 
 <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
