--- a/nav.html
+++ b/nav.html
@@ -6,21 +6,29 @@
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
 </head>
 
-<!-- About -->
-<div>
-    <p class="menu-header">About</p>
-</div>
-
-<!-- Games -->
-<div>
-    <p class="menu-header">Games</p>
-    <a class="menu-item" href="games/luigi.html" onclick="load('games/luigi.html')" target="main">
-        <i>Winter, 2001: Someone tell Luigi I love him</i>
-    </a><br>
-    <a class="menu-item" href="games/joanie.html" onclick="load('games/joanie.html')" target="main">
-        <i>Joanie</i>
-    </a><br>
-    <a class="menu-item" href="games/maps.html" onclick="load('games/maps.html')" target="main">
-        <i>Maps of the Known World</i>
-    </a><br>
+<div class="nav-menu">
+    <div>
+        <span class="menu-header" style="white-space: nowrap">. . . . .Joey Schutz. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .</span><br/><br/>
+    </div>
+    
+    <!-- About -->
+    <div>
+        <a class="menu-header" href="info/about.html" onclick="load('info/about.html')" target="main">
+            About
+        </a>
+    </div>
+    
+    <!-- Games -->
+    <div>
+        <span class="menu-header">Games</span><br/>
+        <a class="menu-item" href="games/luigi.html" onclick="load('games/luigi.html')" target="main">
+            <i>Winter, 2001: Someone tell Luigi I love him</i>
+        </a><br>
+        <a class="menu-item" href="games/joanie.html" onclick="load('games/joanie.html')" target="main">
+            <i>Joanie</i>
+        </a><br>
+        <a class="menu-item" href="games/maps.html" onclick="load('games/maps.html')" target="main">
+            <i>Maps of the Known World</i>
+        </a><br>
+    </div>
 </div>
