--- a/landing.html
+++ b/landing.html
@@ -1,3 +1,3 @@
 <div>
-    Hey there, traveler. Thanks for stopping by.
+    Hey there, traveler. You can adjust the frame sizes how you like. Thanks for stopping by.
 </div>
