--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0" />
 <head>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <script src="code/index.js"></script>
 </head>
 
-<link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet"> 
 <html>
 
-<frameset id="frameSet1" cols="20%,*">
+<!-- <frameset id="frameSet1" cols="20%,*">
     <frameset id="frameSet2" rows="100%">
-        <frame src="nav.html" name="nav" id="nav">
+        <frame src="nav.html" name="nav" id="nav" class="nav-menu">
     </frameset>
-    <frame src="landing.html" name="main" id="main">
-</frameset>
+    <frameset id="frameSet3" rows="40px,*">
+        <frame src="headers/header.html" name="header" id="header-frame">
+        <frame src="miscellaneous/void.html" onload="onNavClick()" name="main" id="main-frame">
+    </frameset>
+</frameset> -->
 
+
+<div class="sidebar-nav">
+    <span class="title">Joey Schutz</span>
+    <a>games</a>
+    <a>writing</a>
+    <a>about</a>
+</div>
 </html>
