--- a/info/about.html
+++ b/info/about.html
@@ -1,1 +1,33 @@
-about section
+<!DOCTYPE html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0" />
+<meta name="header" content="ABOUT" />
+<head>
+    <link rel="stylesheet" type="text/css" href="../styles/main.css">
+</head>
+
+<!-- <style>
+    /* body {
+        background: url("../pictures/caltrain_fantasia.gif") no-repeat center center fixed;
+        /* background-repeat: repeat; */
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        color: rgb(247, 255, 174);
+        font-size: 25px;
+        padding: 10%;
+    }
+
+    .welcome-msg {
+        /* padding-top: 250px; */
+        text-align: left;
+        padding-left: 35%;
+        width: 350px;
+        /* background-color: black; */
+    } */
+</style> -->
+
+<div>
+    about page :)
+</div>
