basic landing page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
 
 
 <div class="sidebar-nav">
-    <span class="title">Joey Schutz</span>
+    <a class="title">Joey Schutz</a>
     <a>games</a>
     <a>writing</a>
     <a>about</a>
+</div>
+
+
+<div class="main-container">
+    <div class="centered" style="padding-top: 58px">
+        hi there! i'm joey schutz.
+        <br/><br/>
+        i make surrealist games that take funny ideas seriously.
+    </div>
 </div>
 </html>
