table is working

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
 <div class="sidebar-nav">
     <a class="title">Joey Schutz</a>
-    <a>games</a>
+    <a href="">games</a>
     <a>writing</a>
-    <a>about</a>
+    <a href="info/about.html">about</a>
+    <a href="videogames-database/videogames-database.html">videogames-database</a>
 </div>
 
 
