--- a/videogames-database/videogames-database.html
+++ b/videogames-database/videogames-database.html
@@ -4,18 +4,19 @@
 <meta name="header" content="ABOUT" />
 <head>
     <link rel="stylesheet" type="text/css" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../styles/videogames-database.css">
     <script src="../code/videogames-database.js"></script> 
 </head>
 
 <!-- <iframe id="frmFile" src="VideogamesDatabase.csv" onload="LoadFile();" style="display: none;"></iframe> -->
 
 <div>
-    <table style="width: 80%" id="videogames-table">
+    <table style="width: 80%; margin-left: 10%; margin-top: 25px;" id="videogames-table">
         <colgroup>
            <col span="1" style="width: 20%;">
            <col span="1" style="width: 10%;">
            <col span="1" style="width: 10%;">
-           <col span="1" style="width: 10%;">
+           <col span="1" style="width: 5%">
            <col span="1" style="width: 10%;">
            <col span="1" style="width: 10%;">
            <col span="1" style="width: 10%;">
