just a link to blog

--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0" />
 <head>
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="/site.css">
 </head>
 
-<link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
 <html>
-
-<frameset id="frameSet1" cols="20%,*">
-    <frameset id="frameSet2" rows="100%">
-        <frame src="nav.html" name="nav" id="nav">
-    </frameset>
-    <frame src="landing.html" name="main" id="main">
-</frameset>
-
+    <body>
+        <div class="Body">
+            <div class="Body-container">
+                <a href="">nothing here for now, go to blog</a>
+            </div>
+        </div>        
+    </body>
+    <footer></footer>
 </html>
