rederict to blog

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="Body">
             <div class="Body-container">
-                <a href="">nothing here for now, go to blog</a>
+                <a href="https://blog.joeyschutz.com">nothing here for now, go to blog</a>
             </div>
         </div>        
     </body>
