working on racer registration page (styles)

--- a/boshi-olympics/race.html
+++ b/boshi-olympics/race.html
@@ -17,9 +17,9 @@
     <title>blog - joey schutz</title>
     <link rel="icon" href="/img/favicon.png">
 
-    <link rel="stylesheet" type="text/css" href="racer-registration.css">
+    <link rel="stylesheet" type="text/css" href="olympics.css">
     
-        <script src="race.js"></script>
+        <script src="code/race.js"></script>
     
 </head>
 
