--- a/boshi-olympics/racer-submitted.html
+++ b/boshi-olympics/racer-submitted.html
@@ -17,7 +17,7 @@
     <title>blog - joey schutz</title>
     <link rel="icon" href="/img/favicon.png">
 
-    <link rel="stylesheet" type="text/css" href="racer-registration.css">
+    <link rel="stylesheet" type="text/css" href="olympics.css">
     
         <!-- <script src="racer-registration.js"></script> -->
     
