basic racer creation is done

--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -61,27 +61,27 @@
                 <div class="Blog-commentNameInput">
                     <div class="Blog-commentNameInputLabel">speed:</div>
                     <div class="racer-stats">
-                        <button>-</button>
+                        <button id="speedMinus">-</button>
                         <input id="speed" readonly type="number" placeholder="0">
-                        <button>+</button>
+                        <button id="speedPlus">+</button>
                     </div>
                 </div>
                 <br/>
                 <div class="Blog-commentNameInput">
                     <div class="Blog-commentNameInputLabel">stamina:</div>
                     <div class="racer-stats">
-                        <button>-</button>
+                        <button id="staminaMinus">-</button>
                         <input id="stamina" readonly type="number" placeholder="0">
-                        <button>+</button>
+                        <button id="staminaPlus">+</button>
                     </div>
                 </div>
                 <br/>
                 <div class="Blog-commentNameInput">
                     <div class="Blog-commentNameInputLabel">determination:</div>
                     <div class="racer-stats">
-                        <button>-</button>
+                        <button id="determinationMinus">-</button>
                         <input id="determination" readonly type="number" placeholder="0">
-                        <button>+</button>
+                        <button id="determinationPlus">+</button>
                     </div>
                 </div>
                 <br/>
