small style tweaks

--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -86,7 +86,7 @@
                 </div>
                 <br/>
                 <div class="Blog-commentInputField">
-                    <button id="submit-racer-btn">submit racer</button>
+                    <button style="margin-left: 152px;" id="submit-racer-btn">submit racer</button>
                 </div>
             </div>
             <footer>
