--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -54,7 +54,7 @@
                 <hr>
                 <div class="racerPointsAvailable">
                     <div class="racerPointsText">
-                        Points Available: <span id="racerPoints">10</span>
+                        Points Available: <span id="racerPoints">25</span>
                     </div>                    
                 </div>
 
@@ -62,7 +62,7 @@
                     <div class="Blog-commentNameInputLabel">speed:</div>
                     <div class="racer-stats">
                         <button id="speedMinus">-</button>
-                        <input id="speed" readonly type="number" placeholder="0">
+                        <input id="speed" readonly type="number" value="0" placeholder="0">
                         <button id="speedPlus">+</button>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                     <div class="Blog-commentNameInputLabel">stamina:</div>
                     <div class="racer-stats">
                         <button id="staminaMinus">-</button>
-                        <input id="stamina" readonly type="number" placeholder="0">
+                        <input id="stamina" readonly type="number" value="1">
                         <button id="staminaPlus">+</button>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                     <div class="Blog-commentNameInputLabel">determination:</div>
                     <div class="racer-stats">
                         <button id="determinationMinus">-</button>
-                        <input id="determination" readonly type="number" placeholder="0">
+                        <input id="determination" readonly type="number" value="0" placeholder="0">
                         <button id="determinationPlus">+</button>
                     </div>
                 </div>
