--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -100,10 +100,10 @@
                 <b>speed:</b> this is how fast your character will go each time you cheer them on.
                 <br/>
                 <br/>
-                <b>stamina:</b> this is how many times you can cheer your character per 2-second interval before they begin to tire out. each time you cheer for them while they are out of stamina, their speed will decrease by 1 for the rest of the race.
+                <b>stamina:</b> this is how many times you can cheer your character before they get tired, and their speed decreases by 1 for the rest of race. i.e. if your stamina is 5, every 5 cheers your speed will go down by 1
                 <br/>
                 <br/>
-                <b>determination:</b> when your stamina runs out, this is the % chance it will automatically refill and your speed instead goes up by 110%
+                <b>determination:</b> when your stamina runs out, this is the % chance it will automatically refill and your speed instead goes up by 120%
             </div>
             <footer>
                 <hr>
