--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -26,22 +26,22 @@
 <html lang="en">
 
 <body>
-    <!-- <header>
+    <header>
     <div class="Header-container">
         <nav>
             <ul>
-                <li><a href="/">home</a></li>
-                <li><a href="/archive">archive</a></li>
-                <li><a href="/links">links</a></li>
+                <li><a href="/boshi-olympics/racer-registration.html">registration</a></li>
+                <li><a href="/boshi-olympics/race.html">racing</a></li>
+                <li><a href="/boshi-olympics/training.html">training</a></li>
             </ul>
         </nav>
     </div>
-</header> -->
+</header>
 
     <div class="Body">
         <div class="Body-container">
 
-            <div class="Blog-header" style="margin-top: 85px;">
+            <div class="Blog-header" style="margin-top: 35px;">
                 -------- your racer!! --------
             </div>
 
