--- a/boshi-olympics/race.html
+++ b/boshi-olympics/race.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0" />
 
-<meta name="title" property="og:title" content="blog - joey schutz">
+<meta name="title" property="og:title" content="boshi olympics - race">
 <meta name="type" property="og:type" content="website">
 <meta name="image" property="og:image" content="clouds.jpg">
 <meta name="url" property="og:url" content="">
@@ -10,11 +10,11 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="blog.joeyschutz.com">
 <meta property="twitter:url" content="">
-<meta name="twitter:title" content="blog - joey schutz">
+<meta name="twitter:title" content="boshi olympics - race">
 <meta name="twitter:image" content="clouds.jpg">
 
 <head>
-    <title>blog - joey schutz</title>
+    <title>boshi olympics - race</title>
     <link rel="icon" href="/img/favicon.png">
 
     <link rel="stylesheet" type="text/css" href="olympics.css">
