--- a/boshi-olympics/training.html
+++ b/boshi-olympics/training.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" type="text/css" href="olympics.css">
 
+    <script src="code/showHidePage.js"></script>
     <script src="code/training.js"></script>
 
 </head>
@@ -38,7 +39,13 @@
     </div>
 </header>
 
-    <div class="Body">
+    <div class="Body" id="disallowedMessage" style="display: none">
+        <div class="Body-container" style="margin-top: 35px;">
+            you can't train right now. come back when it's time to train!
+        </div>
+    </div>
+
+    <div class="Body" id="realPage" style="display: none">
         <div class="Body-container">
 
             <div class="Blog-header" style="margin-top: 35px;">
