show/hide racing page as well

--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -18,7 +18,7 @@
     <link rel="icon" href="/img/favicon.png">
 
     <link rel="stylesheet" type="text/css" href="olympics.css">
-
+    
     <script src="code/racer-registration.js"></script>
 
 </head>
@@ -38,7 +38,7 @@
     </div>
 </header>
 
-    <div class="Body">
+    <div class="Body" id="realPage">
         <div class="Body-container">
 
             <div class="Blog-header" style="margin-top: 35px;">
