track racer ids

--- a/boshi-olympics/racer-submitted.html
+++ b/boshi-olympics/racer-submitted.html
@@ -42,7 +42,7 @@
             <div class="Body-container">
                 
 <div class="Blog-header" style="margin-top: 35px;">
-    -------- racer submitted :) --------
+    -------- submitted :) --------
 </div>
             </div>
         </div>
