--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" type="text/css" href="olympics.css">
     
+    <script src="code/uuidGenerator.js"></script>
     <script src="code/racer-registration.js"></script>
 
 </head>
@@ -62,7 +63,7 @@
                     <div class="Blog-commentNameInputLabel">speed:</div>
                     <div class="racer-stats">
                         <button id="speedMinus">-</button>
-                        <input id="speed" readonly type="number" value="0" placeholder="0">
+                        <input id="speed" readonly type="number" value="1">
                         <button id="speedPlus">+</button>
                     </div>
                 </div>
@@ -89,7 +90,7 @@
                     <button style="margin-left: 152px;" id="submit-racer-btn">submit racer</button>
                 </div>
             </div>
-            <br/>
+            <!-- <br/>
             <br/>
             <br/>
             <div>
@@ -104,7 +105,7 @@
                 <br/>
                 <br/>
                 <b>determination:</b> when your stamina runs out, this is the % chance it will automatically refill and your speed instead goes up by 120%
-            </div>
+            </div> -->
             <footer>
                 <hr>
                 <div>
