--- a/boshi-olympics/training.html
+++ b/boshi-olympics/training.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" type="text/css" href="olympics.css">
 
+    <script src="code/uuidGenerator.js"></script>
     <script src="code/showHidePage.js"></script>
     <script src="code/training.js"></script>
 
@@ -95,10 +96,10 @@
                 </div>
                 <br/>
                 <div class="Blog-commentInputField">
-                    <button style="margin-left: 152px;" id="submit-racer-btn">submit racer</button>
+                    <button style="margin-left: 152px;" id="submit-btn">submit</button>
                 </div>
             </div>
-            <br/>
+            <!-- <br/>
             <br/>
             <br/>
             <div>
@@ -113,7 +114,7 @@
                 <br/>
                 <br/>
                 <b>determination:</b> when your stamina runs out, this is the % chance it will automatically refill and your speed instead goes up by 120%
-            </div>
+            </div> -->
             <footer>
                 <hr>
                 <div>
