--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="olympics.css">
     
     <script src="code/uuidGenerator.js"></script>
+    <script src="/olympics-helpers/googleSheets.js"></script>
     <script src="code/racer-registration.js"></script>
 
 </head>
