--- a/boshi-olympics/race.html
+++ b/boshi-olympics/race.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" type="text/css" href="olympics.css">
     
+    <script src="/olympics-helpers/googleSheets.js"></script>
     <script src="code/showHidePage.js"></script>
     <script src="code/race.js"></script>
     
