--- a/boshi-olympics/training.html
+++ b/boshi-olympics/training.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="olympics.css">
 
     <script src="code/uuidGenerator.js"></script>
+    <script src="/olympics-helpers/googleSheets.js"></script>
     <script src="code/googleFetcher.js"></script>
     <script src="code/showHidePage.js"></script>
     <script src="code/training.js"></script>
