working on racer types

--- a/boshi-olympics/race.html
+++ b/boshi-olympics/race.html
@@ -60,7 +60,7 @@
                         <hr>
 
                         <div style="margin-bottom: 20px;">
-                            you are cheering for: <span id="youAreCheeringFor">boshi</span>
+                            you are cheering for: <span class="neonTextLabel" id="youAreCheeringFor">boshi</span>
                         </div>
         
                         <div class="Blog-commentNameInput">
