can pray for boshis

--- a/boshi-olympics/race.html
+++ b/boshi-olympics/race.html
@@ -89,6 +89,12 @@
                                 <button style="margin-left: 125px; margin-top: 40px; width: 120px; height: 40px;" id="cheer-btn">cheer!</button>
                             </div>
                         </div>
+
+                        <div id="Blog-commentsSectionContainer">
+                            <div class="Blog-commentInputField">
+                                <button style="margin-left: 125px; margin-top: 40px; width: 120px; height: 40px; background-color: var(--link-purple); color: var(--background-pink);" id="pray-btn">pray 👼</button>
+                            </div>
+                        </div>
                     </div>
                     
                 </div>
