--- a/boshi-olympics/race.html
+++ b/boshi-olympics/race.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="olympics.css">
     
     <script src="code/googleFetcher.js"></script>
+    <script src="code/focuserBtnController.js"></script>
     <script src="code/race.js"></script>
     
 </head>
