add unique id for the person cheering

--- a/boshi-olympics/race.html
+++ b/boshi-olympics/race.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" type="text/css" href="olympics.css">
     
+    <script src="code/uuidGenerator.js"></script>
     <script src="code/googleFetcher.js"></script>
     <script src="code/focuserBtnController.js"></script>
     <script src="code/race.js"></script>
