fix initial pacer cheer

--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -55,7 +55,7 @@
                         <option value="religious">religious</option>
                         <option value="crowdPleaser">crowd pleaser</option>
                         <!-- <option value="loner">loner</option> -->
-                        <option value="speedster">speedster</option>
+                        <!-- <option value="speedster">speedster</option> -->
                         <option value="focuser">focuser</option>
                         <option value="pacer">pacer</option>
                     </select>
