can incremenet / decrement items

--- a/boshi-olympics/training.html
+++ b/boshi-olympics/training.html
@@ -103,14 +103,14 @@
                         </div>
                         
                         <div class="itemsShopHeader">
-                            items                 
+                            items (cost 10)             
                         </div>
 
                         <div class="Blog-commentNameInput">
                             <div class="Blog-commentNameInputLabel">boshi bars:</div>
                             <div class="racer-stats">
                                 <button id="boshiBarsMinus">-</button>
-                                <input id="boshiBar" readonly type="number" value="0" placeholder="0">
+                                <input id="boshiBars" readonly type="number" value="0" placeholder="0">
                                 <button id="boshiBarsPlus">+</button>
                             </div>
                         </div>
