--- a/boshi-olympics/training.html
+++ b/boshi-olympics/training.html
@@ -110,7 +110,7 @@
                             <div class="Blog-commentNameInputLabel">boshi bars:</div>
                             <div class="racer-stats">
                                 <button id="boshiBarsMinus">-</button>
-                                <input id="boshiBars" readonly type="number" value="0" placeholder="0">
+                                <input id="boshiBars" readonly type="number" value="0">
                                 <button id="boshiBarsPlus">+</button>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                             <div class="Blog-commentNameInputLabel">steroid injections:</div>
                             <div class="racer-stats">
                                 <button id="steroidsMinus">-</button>
-                                <input id="steroids" readonly type="number" value="0" placeholder="0">
+                                <input id="steroids" readonly type="number" value="0">
                                 <button id="steroidsPlus">+</button>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                             <div class="Blog-commentNameInputLabel">boshi god idols:</div>
                             <div class="racer-stats">
                                 <button id="idolsMinus">-</button>
-                                <input id="idols" readonly type="number" value="0" placeholder="0">
+                                <input id="idols" readonly type="number" value="0">
                                 <button id="idolsPlus">+</button>
                             </div>
                         </div>
