added back stats explanation

--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -116,7 +116,7 @@
 
                 
             </div>
-            <!-- <br/>
+            <br/>
             <br/>
             <br/>
             <div>
@@ -127,11 +127,11 @@
                 <b>speed:</b> this is how fast your character will go each time you cheer them on.
                 <br/>
                 <br/>
-                <b>stamina:</b> this is how many times you can cheer your character before they get tired, and their speed decreases by 1 for the rest of race. i.e. if your stamina is 5, every 5 cheers your speed will go down by 1
+                <b>stamina:</b> this is how many times you can cheer your character before they get tired, and their speed decreases by 90%. (note that speed resets at the beginning of the NEXT race)
                 <br/>
                 <br/>
                 <b>determination:</b> when your stamina runs out, this is the % chance it will automatically refill and your speed instead goes up by 120%
-            </div> -->
+            </div>
             <footer>
                 <hr>
                 <div>
