fix determination increment

--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -56,7 +56,7 @@
                         <option value="crowdPleaser">crowd pleaser</option>
                         <!-- <option value="loner">loner</option> -->
                         <!-- <option value="speedster">speedster</option> -->
-                        <option value="focuser">focuser</option>
+                        <!-- <option value="focuser">focuser</option> -->
                         <option value="pacer">pacer</option>
                     </select>
                 </div>
@@ -78,7 +78,7 @@
                     
                     <div class="racerPointsAvailable">
                         <div class="racerPointsText">
-                            Points Available: <span id="racerPoints">25</span>
+                            Points Available: <span id="racerPoints">10</span>
                         </div>                    
                     </div>
     
