UI for racer customization

--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -75,6 +75,23 @@
                         <div class="Blog-commentNameInputLabel">name:</div>
                         <input id="name" style="width: 200px;" type="text" placeholder="racer's name">
                     </div>
+
+                    <div class="boshiParts">
+                        <button class="boshiPartBtn" style="margin-top: 20px; margin-left: 112px;"><</button>
+                        <img id="boshiPart-head" style="z-index: 5" src="assets/BoshiPartsSprites_heads/BoshiHead1.png">
+                        <button class="boshiPartBtn" style="margin-top: 20px; margin-left: 320px;">></button>
+                        <button class="boshiPartBtn" style="margin-top: 50px; margin-left: 112px;"><</button>
+                        <img id="boshiPart-arms" style="z-index: 2" src="assets/BoshiParts_Bodies/Boshi_Arms_Green.png">
+                        <button class="boshiPartBtn" style="margin-top: 50px; margin-left: 320px;">></button>
+                        <button class="boshiPartBtn" style="margin-top: 80px; margin-left: 112px;"><</button>
+                        <img id="boshiPart-body" style="z-index: 1" src="assets/BoshiParts_Bodies/Boshi_Body_Green.png">
+                        <button class="boshiPartBtn" style="margin-top: 80px; margin-left: 320px;">></button>
+                        <button class="boshiPartBtn" style="margin-top: 110px; margin-left: 112px;"><</button>
+                        <img id="boshiPart-legs" style="z-index: 0" src="assets/BoshiParts_Bodies/Boshi_Legs_Green.png">
+                        <button class="boshiPartBtn" style="margin-top: 110px; margin-left: 320px;">></button>
+
+                        
+                    </div>
                     
                     <div class="racerPointsAvailable">
                         <div class="racerPointsText">
