for real submit character picker

--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -73,7 +73,7 @@
 
                     <div class="Blog-commentNameInput">
                         <div class="Blog-commentNameInputLabel">name:</div>
-                        <input id="name" style="width: 200px;" type="text" placeholder="racer's name">
+                        <input id="name" style="width: 200px; z-index: 10;" type="text" placeholder="racer's name">
                     </div>
 
                     <div class="boshiParts">
