fix stylings for look

--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -77,18 +77,18 @@
                     </div>
 
                     <div class="boshiParts">
-                        <button id="boshiHeadPlus" class="boshiPartBtn" style="margin-top: 20px; margin-left: 100px;"><</button>
+                        <button id="boshiHeadPlus" class="boshiPartBtn" style="margin-top: 20px; margin-left: 10%;"><</button>
                         <img id="boshiPart-Head" style="z-index: 5" src="assets/BoshiPartsSprites_heads/BoshiHead1.png">
-                        <button id="boshiHeadMinus" class="boshiPartBtn" style="margin-top: 20px; margin-left: 320px;">></button>
-                        <button id="boshiArmsPlus" class="boshiPartBtn" style="margin-top: 50px; margin-left: 100px;"><</button>
+                        <button id="boshiHeadMinus" class="boshiPartBtn" style="margin-top: 20px; margin-left: calc(20% + 200px);">></button>
+                        <button id="boshiArmsPlus" class="boshiPartBtn" style="margin-top: 50px; margin-left: 10%;"><</button>
                         <img id="boshiPart-Arms" style="z-index: 2" src="assets/BoshiParts_Bodies/Boshi_Arms_Green.png">
-                        <button id="boshiArmsMinus" class="boshiPartBtn" style="margin-top: 50px; margin-left: 320px;">></button>
-                        <button id="boshiBodyPlus" class="boshiPartBtn" style="margin-top: 80px; margin-left: 100px;"><</button>
+                        <button id="boshiArmsMinus" class="boshiPartBtn" style="margin-top: 50px; margin-left: calc(20% + 200px);">></button>
+                        <button id="boshiBodyPlus" class="boshiPartBtn" style="margin-top: 80px; margin-left: 10%;"><</button>
                         <img id="boshiPart-Body" style="z-index: 1" src="assets/BoshiParts_Bodies/Boshi_Body_Green.png">
-                        <button id="boshiBodyMinus" class="boshiPartBtn" style="margin-top: 80px; margin-left: 320px;">></button>
-                        <button id="boshiLegsPlus" class="boshiPartBtn" style="margin-top: 110px; margin-left: 100px;"><</button>
+                        <button id="boshiBodyMinus" class="boshiPartBtn" style="margin-top: 80px; margin-left: calc(20% + 200px);">></button>
+                        <button id="boshiLegsPlus" class="boshiPartBtn" style="margin-top: 110px; margin-left: 10%;"><</button>
                         <img id="boshiPart-Legs" style="z-index: 0" src="assets/BoshiParts_Bodies/Boshi_Legs_Green.png">
-                        <button id="boshiLegsMinus" class="boshiPartBtn" style="margin-top: 110px; margin-left: 320px;">></button>
+                        <button id="boshiLegsMinus" class="boshiPartBtn" style="margin-top: 110px; margin-left: calc(20% + 200px);">></button>
 
                         
                     </div>
