--- a/boshi-olympics/training.html
+++ b/boshi-olympics/training.html
@@ -41,13 +41,13 @@
     </div>
 </header>
 
-    <div class="Body" id="disallowedMessage" style="display: none">
+    <!-- <div class="Body" id="disallowedMessage" style="display: none">
         <div class="Body-container" style="margin-top: 35px;">
             you can't train right now. come back when it's time to train!
         </div>
-    </div>
+    </div> -->
 
-    <div class="Body" id="realPage" style="display: none">
+    <div class="Body" id="realPage">
         <div class="Body-container">
 
             <div class="Blog-header" style="margin-top: 35px;">
