show who you are cheering for

--- a/boshi-olympics/race.html
+++ b/boshi-olympics/race.html
@@ -66,6 +66,13 @@
                         <div style="margin-bottom: 20px;">
                             you are cheering for: <span class="neonTextLabel" id="youAreCheeringFor">boshi</span>
                         </div>
+
+                        <div class="boshiParts">
+                            <img id="boshiPart-Head" style="z-index: 5" src="assets/BoshiPartsSprites_heads/BoshiHead1.png">
+                            <img id="boshiPart-Arms" style="z-index: 2" src="assets/BoshiParts_Bodies/Boshi_Arms_Green.png">
+                            <img id="boshiPart-Body" style="z-index: 1" src="assets/BoshiParts_Bodies/Boshi_Body_Green.png">
+                            <img id="boshiPart-Legs" style="z-index: 0" src="assets/BoshiParts_Bodies/Boshi_Legs_Green.png">                            
+                        </div>
         
                         <div class="Blog-commentNameInput">
                             <div class="Blog-commentNameInputLabel">speed:</div>
