show who you are training

--- a/boshi-olympics/training.html
+++ b/boshi-olympics/training.html
@@ -69,6 +69,14 @@
                         <div style="margin-bottom: 20px;">
                             you are training: <span class="neonTextLabel" id="youAreTrainingFor">boshi</span>
                         </div>
+
+                        <div class="boshiParts">
+                            <img id="boshiPart-Head" style="z-index: 5" src="assets/BoshiPartsSprites_heads/BoshiHead1.png">
+                            <img id="boshiPart-Arms" style="z-index: 2" src="assets/BoshiParts_Bodies/Boshi_Arms_Green.png">
+                            <img id="boshiPart-Body" style="z-index: 1" src="assets/BoshiParts_Bodies/Boshi_Body_Green.png">
+                            <img id="boshiPart-Legs" style="z-index: 0" src="assets/BoshiParts_Bodies/Boshi_Legs_Green.png">                            
+                        </div>
+                        
                         <div class="racerPointsAvailable">
                             <div class="racerPointsText">
                                 Points Available: <span id="racerPoints">25</span>
