add note to check back in

--- a/boshi-olympics/racer-submitted.html
+++ b/boshi-olympics/racer-submitted.html
@@ -44,6 +44,8 @@
 <div class="Blog-header" style="margin-top: 35px;">
     -------- submitted :) --------
 </div>
+
+check back in when a race is happening!
             </div>
         </div>
 
