--- a/class/intermediate-game-design/ramen-fury-reflection.html
+++ b/class/intermediate-game-design/ramen-fury-reflection.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="/img/favicon.png">
 
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="turn-in.js"></script>
 </head>
 
 <html lang="en">
@@ -44,7 +45,7 @@
 
             <div class="Blog-commentNameInput">
                 <div class="Blog-commentNameInputLabel">your name:</div>
-                <input id="Blog-submitCommentNameField" type="text" placeholder="your name">
+                <input id="name" type="text" placeholder="your name">
             </div>
 
             <hr style="margin-top: 35px;">
@@ -66,7 +67,7 @@
             <div id="Blog-commentsSectionContainer">
                 <div class="Blog-commentInputField">
                     <div class="Blog-commentNameInputLabel">(put your reflection below :)</div>
-                    <textarea id="Blog-submitCommentTextField"></textarea>
+                    <textarea id="reflection"></textarea>
                 </div>
             </div>
 
@@ -74,7 +75,7 @@
             <div id="Blog-commentsSectionContainer">
                 <div class="Blog-commentInputField">
                     <div class="Blog-commentNameInputLabel">how can you work better with your team next time?</div>
-                    <textarea id="Blog-submitCommentTextField"></textarea>
+                    <textarea id="teamwork"></textarea>
                 </div>
             </div>
 
@@ -83,7 +84,7 @@
             <div id="Blog-commentsSectionContainer">
                 <div class="Blog-commentInputField">
                     <div class="Blog-commentNameInputLabel">what might you need help with, next time?</div>
-                    <textarea id="Blog-submitCommentTextField"></textarea>
+                    <textarea id="help"></textarea>
                 </div>
             </div>
 
@@ -92,17 +93,6 @@
                 <button id="Blog-submitCommentBtn">submit</button>
                 </div>
             </div>
-            <footer>
-                <hr>
-                <div>
-                    this site is written and maintained by joey (me). you can find <a
-                        href="https://github.com/jamschutz/blog-site">the source code</a> over yonder :) <br />
-                    you can also find me on <a href="https://jamschutz.itch.io/">itch</a>, <a
-                        href="https://twitter.com/SchutzJoey">twitter</a>, <a
-                        href="https://bsky.app/profile/joeyschutz.bsky.social">bluesky</a>, and good old-fashioned <a
-                        href="mailto: schutzjoey@gmail.com">email</a>
-                </div>
-            </footer>
         </div>
     </div>
 
