--- a/class/intermediate-game-design/ramen-fury-reflection.html
+++ b/class/intermediate-game-design/ramen-fury-reflection.html
@@ -46,6 +46,7 @@
             <div class="Blog-commentNameInput">
                 <div class="Blog-commentNameInputLabel">your name:</div>
                 <input id="name" type="text" placeholder="your name">
+                <div id="nameWarning" style="display: none;" class="requiredWarning">this is required :)</div>
             </div>
 
             <hr style="margin-top: 35px;">
@@ -68,6 +69,7 @@
                 <div class="Blog-commentInputField">
                     <div class="Blog-commentNameInputLabel">(put your reflection below :)</div>
                     <textarea id="reflection"></textarea>
+                    <div id="reflectionWarning" style="display: none;" class="requiredWarning">this is required :)</div>
                 </div>
             </div>
 
@@ -76,6 +78,7 @@
                 <div class="Blog-commentInputField">
                     <div class="Blog-commentNameInputLabel">how can you work better with your team next time?</div>
                     <textarea id="teamwork"></textarea>
+                    <div id="teamworkWarning" style="display: none;" class="requiredWarning">this is required :)</div>
                 </div>
             </div>
 
@@ -85,12 +88,14 @@
                 <div class="Blog-commentInputField">
                     <div class="Blog-commentNameInputLabel">what might you need help with, next time?</div>
                     <textarea id="help"></textarea>
+                    <div id="helpWarning" style="display: none;" class="requiredWarning">this is required :)</div>
                 </div>
             </div>
 
             <div id="Blog-commentsSectionContainer" style="margin-top: 25px;">
                 <div class="Blog-commentInputField">
                 <button id="Blog-submitCommentBtn">submit</button>
+                <div id="submitWarning" style="display: none;" class="requiredWarning">every field is required :)</div>
                 </div>
             </div>
         </div>
