--- a/class/intermediate-game-design/ramen-fury-reflection.html
+++ b/class/intermediate-game-design/ramen-fury-reflection.html
@@ -2,16 +2,16 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0" />
 
-<meta name="title" property="og:title" content="boshi olympics - registration">
+<meta name="title" property="og:title" content="intermediate game design - reflection">
 <meta name="type" property="og:type" content="website">
-<meta name="image" property="og:image" content="clouds.jpg">
+<meta name="image" property="og:image" content="assets/pinksmiles.png">
 <meta name="url" property="og:url" content="">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="blog.joeyschutz.com">
+<meta property="twitter:domain" content="joeyschutz.com">
 <meta property="twitter:url" content="">
-<meta name="twitter:title" content="intermediate game design - registration">
-<meta name="twitter:image" content="clouds.jpg">
+<meta name="twitter:title" content="intermediate game design - reflection">
+<meta name="twitter:image" content="assets/pinksmiles.png">
 
 <head>
     <title>intermediate game design - self reflection</title>
