--- a/boshi-olympics/racer-registration.html
+++ b/boshi-olympics/racer-registration.html
@@ -19,8 +19,8 @@
 
     <link rel="stylesheet" type="text/css" href="olympics.css">
     
-    <script src="code/uuidGenerator.js"></script>
-    <script src="code/racerTypeSelections.js"></script>
+    <script src="code/core/config.js"></script>
+    <script src="code/helpers/racerTypeSelections.js"></script>
     <script src="code/racer-registration.js"></script>
 
 </head>
