--- a/boshi-olympics/training.html
+++ b/boshi-olympics/training.html
@@ -19,9 +19,8 @@
 
     <link rel="stylesheet" type="text/css" href="olympics.css">
 
-    <script src="code/uuidGenerator.js"></script>
-    <script src="code/googleFetcher.js"></script>
-    <script src="code/showHidePage.js"></script>
+    <script src="code/core/config.js"></script>
+    <script src="code/helpers/showHidePage.js"></script>
     <script src="code/training.js"></script>
 
 </head>
