basic assassins creed is in

--- a/boshi-olympics/training.html
+++ b/boshi-olympics/training.html
@@ -21,6 +21,7 @@
 
     <script src="code/core/config.js"></script>
     <script src="code/helpers/showHidePage.js"></script>
+    <script src="code/components/racerDropdown.js"></script>
     <script src="code/training.js"></script>
 
 </head>
