--- a/assassins-creed-ii-countdown/index.html
+++ b/assassins-creed-ii-countdown/index.html
@@ -17,6 +17,9 @@
 
                 <!-- ezio comes in here ... -->
                 <img src="img/ezio.webp" id="ezio">
+
+                <br/>
+                <button id="audioBtn">play audio</button>
             </div>
         </div>        
     </body>
