Added a page for movie tie-in class

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
             <div style="margin-top: 25px">
                 and i also <a href="https://blog.joeyschutz.com">write about games</a> on my blog.
             </div>
+            
+            <div style="margin-top: 100px">
+                <menu class="Landing-navContainer">
+                    <li><a style="text-decoration: none;" href="https://jamschutz.itch.io">GAMES</a></li>
+                    <li><a style="text-decoration: none;" href="/teaching">TEACHING</a></li>
+                    <li><a style="text-decoration: none;" href="https://blog.joeyschutz.com">WRITING</a></li>
+                </menu>
+            </div>
         </div>
     </div>
 </body>
